--- a/estilos.css
+++ b/estilos.css
@@ -1,30 +1,46 @@
-i{
-	cursor: pointer;
+body{
+    background-color: #faf3f4;
 }
+
+
+i{
+  cursor: pointer;
+
+}
+
 .fa-user-plus{
-	border: 1px solid #007bff;
-    border-radius: 40px;
-    font-size: 25px;
-    background-color: #007bff;
-    color: white;
-    padding: 13px 10px;
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
+  font-size: 50px;
+  position: fixed;
+  padding-right: 15px;
+  padding-left: 480px;
+  box-sizing: border-box;
+  bottom: 70px;
 }
 .fa-edit{
-    border: 1px solid #17a2b8;
-    border-radius: 40px;
-    font-size: 16px;
-    background-color: #17a2b8;
-    color: white;
-    padding: 11px 10px;
+  border: 1px solid #17a2b8;
+  border-radius: 40px;
+  font-size: 16px;
+  background-color: #17a2b8;
+  color: white;
+  padding: 11px 10px;
 }
 .fa-trash-alt{
-	border: 1px solid #dc3545;
-    border-radius: 40px;
-    font-size: 16px;
-    background-color: #dc3545;
-    color: white;
-    padding: 11px 12px;
+  border: 1px solid #dc3545;
+  border-radius: 40px;
+  font-size: 16px;
+  background-color: #dc3545;
+  color: white;
+  padding: 11px 12px;
 }
+
+
+/*
+border: 1px solid #007bff;
+border-radius: 40px;
+font-size: 25px;
+background-color: #007bff;
+color: white;
+padding: 8px 10px;
+position: fixed;
+bottom: 20px;
+right: 20px;*/
